# autoconstruction

./: README.md
ac_vision/: CMakeLists.txt  mainpage.dox  manifest.xml
ac_vision/resources/classifiers/: ml_d_treessift.yaml  ml_svmhogbrief.yaml  ml_svmsiftbrief.yaml  ml_svmsiftbriefbriskfreak.yaml  ml_svmsiftbrisk.yaml  ml_svmsiftfreak.yaml  ml_svmsifthog.yaml  ml_svmsifthogbrief.yaml
ac_vision/resources/settings/: application_settingsx9.yaml  application_settingsy2.yaml  hog_settings.yaml
ac_vision/resources/settings/application_settings_deprecated/: application_settingsx1.yaml  application_settingsx2.yaml  application_settingsx3.yaml  application_settingsx4.yaml  application_settingsx5.yaml  application_settingsx6.yaml  application_settingsx7.yaml  application_settingsx8.yaml  application_settingsy1.yaml  application_settingsy3.yaml  application_settingsy4.yaml  application_settingsy5.yaml  application_settingsy6.yaml  application_settingsy7.yaml  application_settingsy8.yaml
ac_vision/resources/test_data/ground_truth/: volvo04-0003-0123-person01-distorted.yaml  volvo04-0003-0123-person01-undistorted.yaml  volvo04-0284-0344-person01-undistorted.yaml  volvo04-0284-0344-person02-undistorted.yaml  volvo04-0412-0422-person01-undistorted.yaml  volvo04-0412-0422-person02-undistorted.yaml  volvo04-0412-0422-person03-undistorted.yaml  volvo04-0506-0566-person01-undistorted.yaml  volvo04-0506-0566-person02-undistorted.yaml  volvo08-0092-0122-person01-undistorted.yaml  volvo08-0092-0122-person02-undistorted.yaml  volvo08-0092-0122-person03-undistorted.yaml  volvo08-0196-0206-person01-undistorted.yaml  volvo08-0196-0206-person02-undistorted.yaml  volvo08-0196-0206-person03-undistorted.yaml  volvo08-0274-0334-person01-undistorted.yaml  volvo08-0274-0334-person02-undistorted.yaml  volvo08-0274-0334-person03-undistorted.yaml
ac_vision/resources/test_data/results/cwdt_detection/: average_results.yaml  volvo04-0003-0123.yaml  volvo04-0284-0344.yaml  volvo04-0412-0422.yaml  volvo04-0506-0566.yaml  volvo08-0092-0122.yaml  volvo08-0196-0206.yaml  volvo08-0274-0334.yaml
ac_vision/resources/test_data/results/cwdt_x9/: average_results.yaml  volvo04-0003-0123.yaml  volvo04-0284-0344.yaml  volvo04-0412-0422.yaml  volvo04-0506-0566.yaml  volvo08-0092-0122.yaml  volvo08-0196-0206.yaml  volvo08-0274-0334.yaml
ac_vision/resources/test_data/results/cwdt_x9_hog/: average_results.yaml  volvo04-0003-0123.yaml  volvo04-0284-0344.yaml  volvo04-0412-0422.yaml  volvo04-0506-0566.yaml  volvo08-0092-0122.yaml  volvo08-0196-0206.yaml  volvo08-0274-0334.yaml
ac_vision/resources/test_data/results/cwdt_y2/: average_results.yaml  volvo04-0003-0123.yaml  volvo04-0284-0344.yaml  volvo04-0412-0422.yaml  volvo04-0506-0566.yaml  volvo08-0092-0122.yaml  volvo08-0196-0206.yaml  volvo08-0274-0334.yaml
ac_vision/resources/test_data/results/safety_jacket/: average_results.yaml  volvo04-0003-0123.yaml  volvo04-0284-0344.yaml  volvo04-0412-0422.yaml  volvo04-0506-0566.yaml  volvo08-0092-0122.yaml  (+2 more)
ac_vision/src/: ac_vision.cpp  ac_vision_constants.h
ac_vision/src/bgslibrary/: CMakeLists.txt  Demo.cpp  FrameProcessor.cpp  IFrameProcessor.h  PreProcessor.cpp  PreProcessor.h  VideoCapture.cpp  VideoCapture.h
ac_vision/src/bgslibrary/package_analysis/: ForegroundMaskAnalysis.cpp  ForegroundMaskAnalysis.h
ac_vision/src/bgslibrary/package_bgs/: AdaptiveBackgroundLearning.cpp  AdaptiveBackgroundLearning.h  FrameDifferenceBGS.cpp  FrameDifferenceBGS.h  GMG.cpp  MixtureOfGaussianV1BGS.cpp  MixtureOfGaussianV2BGS.cpp  MixtureOfGaussianV2BGS.h  StaticFrameDifferenceBGS.cpp  WeightedMovingMeanBGS.cpp  WeightedMovingVarianceBGS.cpp
ac_vision/src/models/: CMakeLists.txt  Circle.cpp  Circle.h  ConfusionMatrix.cpp  ConfusionMatrix.h  Human.cpp  Human.h  SafetyJacket.cpp  SafetyJacket.h  models.h
ac_vision/src/tracking/: CMakeLists.txt  HumanTracker.cpp  HumanTracker.h
ac_vision/src/tracking/ParticleFilter/: Condensation.cpp  Condensation.h  ParticleFilter.cpp  ParticleFilter.h  StateData.cpp  StateData.h
ac_vision/src/utils/: ApplicationSession.cpp  ApplicationSession.h  ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  FileUtils.cpp  FileUtils.h  StringUtils.cpp  StringUtils.h
ac_vision/src/utils/opencv/: CMakeLists.txt  CvUtils.cpp  CvUtils.h  ForegroundExtractor.cpp  ForegroundExtractor.h  Hist.cpp  Hist.h  HumanDetector.cpp  HumanDetector.h  SafetyJacketDetector.cpp  SafetyJacketDetector.h  colours.h
ac_vision/src/utils/ros/: CMakeLists.txt  RosUtils.cpp  RosUtils.h
ac_vision/test/: canny.cpp  condens_tracking.cpp  contours.cpp  extract_background.cpp  morphology.cpp  resize_images.cpp  segmentation.cpp
ac_vision/test/ground_truth/: average_results.cpp  compare_ground_truth.cpp  create_ground_truth.cpp  display_results.cpp  extract_ground_truths.cpp  squareise_groundtruths.cpp
ac_vision/test/ground_truth/utils/: CMakeLists.txt  GtUtils.cpp  GtUtils.h
ac_vision/test/ml/: check_ml_results.cpp  ml_accuracy.cpp  testing_ml.cpp  training_ml.cpp
(+221 files in other folders)
